<resources>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="app_name">FlexiPay UI Designs</string>
    <string name="home_activity">Home Activity</string>
    <string name="welcome_text">Welcome to FlexiPay</string>
    <string name="welcome_text_welcome_one">A Fast &amp; Efficient Service to Go Cashless!</string>
    <string name="welcome_text_welcome_two">A Fast &amp; Efficient Service to Go Cashless!</string>
    <string name="welcome_text_welcome_three">Shop Without a Wallet…</string>
    <string name="register_btn_text">REGISTER</string>
    <string name="login_text">Already have an account? Login</string>
    <string name="mobile_number">Using the Mobile Number provided, we will text you a code to verify your account.</string>
    <string name="enter_number">Enter Mobile Number</string>
    <string name="tv_policy">By continuing you are agreeing to our Terms and Conditions as well as our Privacy Policy.</string>
    <string name="continue_btn_text">CONTINUE</string>
    <string name="personal_info">Please provide us with your personal information. Your name should appear just as it appears on your National ID, Passport.</string>
    <string name="personal_info_create">CREATE YOUR ACCOUNT</string>
    <string name="just_one_step">Provide us with the details we have requested below</string>
    <string name="document_photo">Provide us with Document Photo ID.</string>
    <string name="cf_surname">Surname</string>
    <string name="cf_email">Enter Your Email Address</string>
    <string name="cf_dob">What\'s Your D.O.O? (DD/MM/YY)</string>
    <string name="cf_gender">Gender</string>
    <string name="cf_phone">Enter Phone Number</string>
    <string name="cf_alternative_phone">Alternative Mobile Number</string>
    <string name="cf_referral">Referral Code</string>
    <string name="cf_occupation">Select Occupation</string>
    <string name="cf_enter_id">Enter ID</string>
    <string name="given_name">Given Name</string>
    <string name="cf_card_number">Card Number</string>
    <string name="cf_verification_code">Enter the 4-digit code sent to you at</string>
    <string name="cf_verified_number">+254 700 924 528</string>
    <string name="cf_resend_code">Resend code in 00:13</string>
    <string name="cf_id_type">ID Type</string>
    <string name="cf_pin">To Create a New Pin for your Flexipay Wallet Enter Code sent to your Mobile Number</string>
    <string name="cf_code">Enter Code</string>
    <string name="cf_new_pin">New Pin</string>
    <string name="cf_confirm_pin">Confirm Pin</string>
    <string name="fp_wallet">Flexipay Wallet Account</string>
    <string name="bal">+ Hide Balance</string>
    <string name="bal_hidden">+Show Balance</string>

    <string name="rd_points">Redeem Points</string>
    <string name="iv_friend">Invite a Friend</string>
    <string name="snd_mny">Send Money, Make Payments, Invite a Friend &amp; Earn Reward points</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="take_id_front">Take ID Front</string>
    <string name="takeid_back">TakeID Back</string>
    <string name="mini_statement">Ministatement</string>
    <string name="send_money">Send Money</string>
    <string name="snd">Send Money</string>
    <string name="py_merch">Pay Merchants</string>
    <string name="pay_merch">Pay Merchants</string>
    <string name="my_acc">My Accounts</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="sacco">Sacco</string>
    <string name="my_cards">My Cards</string>
    <string name="micro_loans">Micro Loans</string>
    <string name="balance">Ugx 140,457.05</string>
    <string name="flexi_wallet_0700_908_098">Flexi Wallet 0700 908 098</string>
    <string name="buy_airtime_from">Buy Airtime from</string>
    <string name="cards_airtime">Cards</string>
    <string name="send_money_to_wallet_11_jun_2020_17_25">Send Money to Wallet - 11 Jun 2020 | 17:25</string>
    <string name="rec_money">Received Money From Wallet - 02 Jun 2020 | 17:25</string>

    <string name="pos_payments">POS Payments - 08 Jun 2020 | 17:25</string>

    <string name="moreno_ocampo">Moreno Ocampo</string>
    <string name="to_256_790_345_678">TO: 256 790 345 678</string>
    <string name="to_number">TO: 790 345</string>

    <string name="tax_ugx_120_56">TAX: Ugx 120.56</string>
    <string name="tax">TAX: Ugx 99.56</string>
    <string name="tax_air">TAX: Ugx 100.56</string>


    <string name="flexipay_wallet_acc_5446_4567">Flexipay Wallet Acc|5446 **** **** 4567</string>
    <string name="ugx_15_340_00">- Ugx 15,340.00</string>
    <string name="ugx_air">+ Ugx 10,000.00</string>
    <string name="ugx">- Ugx 1,300.00</string>
    <string name="ug">- Ugx 700.00</string>

    <string name="todo">TODO</string>
    <string name="startimes">Startimes</string>
    <string name="umeme_yaka">Umeme Yaka</string>
    <string name="mtn_airtime">MTN Airtime</string>
    <string name="hidden">Ugx *******</string>
    <string name="invited_pp">People you invited</string>
    <string name="top_percentage">This puts you in the top 75%</string>
    <string name="view_tp">View transaction points</string>
    <string name="trans_summary">Transactions Summary</string>
    <string name="money">Money you could earn</string>
    <string name="snd_pts">Send Points to Beneficiary</string>
    <string name="others">Sign up your other 403 contacts</string>
    <string name="invite_frnd"><![CDATA[INVITE FRIEND & EARN MONEY]]></string>
    <string name="flexipay">Flexipay</string>
    <string name="sacco2">Sacco</string>
    <string name="buy_airtime_for">Buy Airtime For:</string>
    <string name="mompati_mokoka">MOMPATI MOKOKA</string>
    <string name="mobile_no_confirm">Mobile No:</string>
    <string name="_0722098098">0722098098</string>
    <string name="amount_confirm">Amount:</string>
    <string name="ugx_100_00">UGX. 100.00</string>
    <string name="transaction_cost">Transaction Cost:</string>
    <string name="ugx_0_00">UGX. 0.00</string>
    <string name="cancel_airtime">CANCEL</string>
    <string name="buy_airtime_confirmed">BUY</string>
    <string name="thank_you">THANK YOU!</string>
    <string name="date_02_jun_2020">Date: 02 Jun 2020</string>
    <string name="you_have_successfully_bought_mtn_airtime_of_ugx_60_000_00_for_wilfred_cuthbert_256790456789">You have successfully bought MTN Airtime of UGX 60,000.00 For Wilfred Cuthbert 256790456789.</string>
    <string name="done">DONE</string>
    <string name="time_17_25">Time: 17:25</string>
    <string name="ref_id_3456789">REF ID: 3456789</string>
    <string name="transaction_cost_ugx_900_00">Transaction Cost: UGX 900.00</string>
    <string name="your_request">Your request has been received. You will receive an SMS confirmation shortly.</string>
    <string name="view_accounts">360 View of All Your Accounts</string>
    <string name="mini_statement_two">Mini Statement</string>
    <string name="full_statement">Full Statement</string>
    <string name="acc_no">Acc 544667894567</string>
    <string name="private_banking">Private Banking Current Account</string>
    <string name="mini">Ministatement</string>
    <string name="smart_direct">Smart Direct Account</string>
    <string name="exim_bank">Exim Bank Uganda | Ugx currency</string>
    <string name="enter_start_date">Enter Start date</string>
    <string name="enter_end">Enter end date</string>
    <string name="morgannajabulani_yahoo_com">morgannajabulani@yahoo.com</string>
    <string name="umeme">UMEME</string>
    <string name="paytv">PAYTV</string>
    <string name="nwsc">NWSC</string>
    <string name="nssf">NSSF</string>
    <string name="kcc">KCC</string>
    <string name="ura">URA</string>
    <string name="uneb">UNEB</string>
    <string name="uedc">UEDC</string>
    <string name="blb">BLB</string>


</resources>