<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BuyAirtimeReceiptFragment"
    android:background="#001D4D"
    android:scaleType="fitXY"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_receipt_logo"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/flexipay_logo"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_receipt"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <LinearLayout
            android:id="@+id/ll_receipt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_thank_you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thank_you"
                android:layout_marginTop="60dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/myfont"
                android:textColor="@color/dashboard_txt_color"
                android:textSize="22sp"/>
            
            <TextView
                android:id="@+id/tv_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myfont"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:text="@string/your_request"
                android:textSize="17sp"
                android:textAlignment="center"/>

            <LinearLayout
                android:id="@+id/ll_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_02_jun_2020"
                    android:textSize="16sp"
                    android:fontFamily="@font/myfont"
                    android:textColor="@color/dashboard_txt_color"/>

                <TextView
                    android:id="@+id/time_confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_17_25"
                    android:layout_marginStart="125dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/myfont"
                    android:textColor="@color/dashboard_txt_color"/>

            </LinearLayout>

            <TextView
                android:id="@+id/success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/myfont"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/you_have_successfully_bought_mtn_airtime_of_ugx_60_000_00_for_wilfred_cuthbert_256790456789"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myfont"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/ref_id_3456789"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myfont"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/transaction_cost_ugx_900_00"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btndone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient"
        android:fontFamily="@font/myfont"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:backgroundTint="@null"/>

</LinearLayout>